feat: 添加 LaTeX 公式复制功能和优化收藏按钮层级
- 新增公式管理器 (formula-manager.js)，支持点击复制 LaTeX 公式源码
- 为 ChatGPT、Gemini、DeepSeek 添加公式交互功能
- 优化公式复制提示文案：tooltip 显示'复制 LaTeX 公式'，成功后提示'复制成功'
- 为所有 54 种语言添加公式复制相关翻译
- 修复收藏聊天按钮 z-index，与时间轴保持一致 (z-index: 50)
- 完善公式交互样式，支持 hover 高亮和点击反馈

--- a/manifest.json
+++ b/manifest.json
@@ -44,6 +44,7 @@
         "js/adapters/kimi.js",
         "js/adapters/yuanbao.js",
         "js/adapters/registry.js",
+        "js/formula-manager.js",
         "js/timeline-manager.js",
         "js/main.js"
       ],
