feat: 添加 Grok 平台适配
- 新增 Grok 适配器 (js/adapters/grok.js)
- 支持 Grok.com 对话页面
- 添加 Grok logo 配置
- 修复时间轴和收藏按钮的左右定位支持
- 统一所有平台的 generateTurnId 使用 index
- 更新 manifest.json 添加 Grok 权限

--- a/manifest.json
+++ b/manifest.json
@@ -29,7 +29,8 @@
         "https://www.tongyi.com/*",
         "https://kimi.moonshot.cn/*",
         "https://www.kimi.com/*",
-        "https://yuanbao.tencent.com/*"
+        "https://yuanbao.tencent.com/*",
+        "https://grok.com/*"
       ],
       "js": [
         "js/common.js",
@@ -45,6 +46,7 @@
         "js/adapters/tongyi.js",
         "js/adapters/kimi.js",
         "js/adapters/yuanbao.js",
+        "js/adapters/grok.js",
         "js/adapters/registry.js",
         "js/formula-manager.js",
         "js/timeline-manager.js",
@@ -69,7 +71,8 @@
         "https://www.tongyi.com/*",
         "https://kimi.moonshot.cn/*",
         "https://www.kimi.com/*",
-        "https://yuanbao.tencent.com/*"
+        "https://yuanbao.tencent.com/*",
+        "https://grok.com/*"
       ]
     }
   ],
