--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "__MSG_extName__",
   "short_name": "AI Timeline",
-  "version": "3.8.0",
+  "version": "3.9.0",
   "description": "__MSG_extDescription__",
   "default_locale": "en",
   "author": "yanchao hou",
@@ -22,6 +22,7 @@
         "<all_urls>"
       ],
       "js": [
+        "js/global/constants.js",
         "js/global/tooltip-manager/index.js",
         "js/global/toast-manager/index.js",
         "js/global/input-modal/index.js",
@@ -30,10 +31,25 @@
         "js/formula/formula-manager.js",
         "js/formula/index.js",
         "js/panelModal/base-tab.js",
-        "js/panelModal/index.js",
         "js/panelModal/tabs/starred/folder-manager.js",
         "js/panelModal/tabs/starred/index.js",
+        "js/panelModal/tabs/timeline/index.js",
+        "js/panelModal/tabs/smartInputBox/index.js",
+        "js/panelModal/tabs/formula/index.js",
         "js/panelModal/tab-registry.js",
+        "js/panelModal/index.js",
+        "js/smartInputBox/constants.js",
+        "js/smartInputBox/adapters/base.js",
+        "js/smartInputBox/adapters/chatgpt.js",
+        "js/smartInputBox/adapters/gemini.js",
+        "js/smartInputBox/adapters/deepseek.js",
+        "js/smartInputBox/adapters/kimi.js",
+        "js/smartInputBox/adapters/perplexity.js",
+        "js/smartInputBox/adapters/tongyi.js",
+        "js/smartInputBox/adapters/grok.js",
+        "js/smartInputBox/adapters/registry.js",
+        "js/smartInputBox/smart-enter-manager.js",
+        "js/smartInputBox/index.js",
         "js/timeline/adapters/base.js",
         "js/timeline/adapters/chatgpt.js",
         "js/timeline/adapters/gemini.js",
@@ -45,7 +61,6 @@
         "js/timeline/adapters/yuanbao.js",
         "js/timeline/adapters/grok.js",
         "js/timeline/adapters/registry.js",
-        "js/timeline/constants.js",
         "js/timeline/common.js",
         "js/timeline/container-finder.js",
         "js/timeline/star-input-modal/star-input-modal.js",
@@ -60,6 +75,9 @@
         "js/global/dropdown-manager/styles.css",
         "js/panelModal/styles.css",
         "js/panelModal/tabs/starred/styles.css",
+        "js/panelModal/tabs/timeline/styles.css",
+        "js/panelModal/tabs/smartInputBox/styles.css",
+        "js/panelModal/tabs/formula/styles.css",
         "js/timeline/star-input-modal/star-input-modal.css",
         "js/timeline/timeline.css",
         "js/formula/formula.css"
