--- a/manifest.json
+++ b/manifest.json
@@ -47,6 +47,7 @@
         "js/runner/languages/registry.js",
         "js/runner/runner-manager.js",
         "js/runner/index.js",
+        "js/panelModal/tabs/runner/index.js",
         "js/panelModal/tabs/settings/index.js",
         "js/panelModal/tab-registry.js",
         "js/panelModal/index.js",
@@ -101,6 +102,7 @@
         "js/panelModal/tabs/formula/styles.css",
         "js/runner/codemirror/codemirror.min.css",
         "js/runner/styles.css",
+        "js/panelModal/tabs/runner/styles.css",
         "js/panelModal/tabs/settings/styles.css",
         "js/timeline/star-input-modal/star-input-modal.css",
         "js/timeline/timeline.css",
