侧边栏展示收藏列表

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "__MSG_extName__",
   "short_name": "AI Timeline",
-  "version": "4.1.7",
+  "version": "4.1.8",
   "description": "__MSG_extDescription__",
   "default_locale": "en",
   "author": "yanchao hou",
@@ -120,6 +120,7 @@
         "js/timeline/common.js",
         "js/timeline/container-finder.js",
         "js/timeline/star-input-modal/star-input-modal.js",
+        "js/timeline/sidebar-starred/index.js",
         "js/timeline/timeline-manager.js",
         "js/timeline/index.js",
         "js/url-button/index.js",
@@ -149,6 +150,7 @@
         "js/panelModal/tabs/watermark/styles.css",
         "js/panelModal/tabs/settings/styles.css",
         "js/timeline/star-input-modal/star-input-modal.css",
+        "js/timeline/sidebar-starred/styles.css",
         "js/timeline/timeline.css",
         "js/formula/formula.css",
         "js/smartInputBox/prompt-button.css",
