--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "__MSG_extName__",
   "short_name": "AI Timeline",
-  "version": "4.1.8",
+  "version": "4.2.0",
   "description": "__MSG_extDescription__",
   "default_locale": "en",
   "author": "yanchao hou",
@@ -123,11 +123,7 @@
         "js/timeline/sidebar-starred/index.js",
         "js/timeline/timeline-manager.js",
         "js/timeline/index.js",
-        "js/url-button/index.js",
-        "js/watermark-remover/alpha-map.js",
-        "js/watermark-remover/blend-modes.js",
-        "js/watermark-remover/watermark-engine.js",
-        "js/watermark-remover/index.js"
+        "js/url-button/index.js"
       ],
       "css": [
         "styles/variables.css",
@@ -154,8 +150,7 @@
         "js/timeline/timeline.css",
         "js/formula/formula.css",
         "js/smartInputBox/prompt-button.css",
-        "js/url-button/styles.css",
-        "js/watermark-remover/styles.css"
+        "js/url-button/styles.css"
       ],
       "run_at": "document_idle"
     }
@@ -165,7 +160,6 @@
     {
       "resources": [
         "images/logo/*.webp",
-        "js/watermark-remover/assets/*.png",
         "js/runner/languages/javascript/sandbox.html",
         "js/runner/languages/javascript/sandbox-script.js",
         "js/runner/languages/python/sandbox.html",
