--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "manifest_version": 3,
   "name": "__MSG_extName__",
   "short_name": "AI Timeline",
-  "version": "4.2.0",
+  "version": "4.3.0",
   "description": "__MSG_extDescription__",
   "default_locale": "en",
   "author": "yanchao hou",
@@ -85,6 +85,7 @@
         "js/runner/index.js",
         "js/panelModal/tabs/runner/index.js",
         "js/panelModal/tabs/watermark/index.js",
+        "js/panelModal/tabs/dataSync/index.js",
         "js/panelModal/tabs/settings/index.js",
         "js/panelModal/tab-registry.js",
         "js/panelModal/index.js",
@@ -117,6 +118,8 @@
         "js/timeline/adapters/perplexity.js",
         "js/timeline/adapters/claude.js",
         "js/timeline/adapters/registry.js",
+        "js/quoteReply/quote-reply-manager.js",
+        "js/quoteReply/index.js",
         "js/timeline/common.js",
         "js/timeline/container-finder.js",
         "js/timeline/star-input-modal/star-input-modal.js",
@@ -144,12 +147,14 @@
         "js/runner/components/floating-runner.css",
         "js/panelModal/tabs/runner/styles.css",
         "js/panelModal/tabs/watermark/styles.css",
+        "js/panelModal/tabs/dataSync/styles.css",
         "js/panelModal/tabs/settings/styles.css",
         "js/timeline/star-input-modal/star-input-modal.css",
         "js/timeline/sidebar-starred/styles.css",
         "js/timeline/timeline.css",
         "js/formula/formula.css",
         "js/smartInputBox/prompt-button.css",
+        "js/quoteReply/styles.css",
         "js/url-button/styles.css"
       ],
       "run_at": "document_idle"
