--- a/manifest.json
+++ b/manifest.json
@@ -107,6 +107,7 @@
         "js/smartInputBox/prompt-button-manager.js",
         "js/smartInputBox/smart-enter-manager.js",
         "js/smartInputBox/index.js",
+        "js/scrollToBottom/scroll-to-bottom-manager.js",
         "js/timeline/adapters/base.js",
         "js/timeline/adapters/chatgpt.js",
         "js/timeline/adapters/gemini.js",
@@ -155,6 +156,7 @@
         "js/timeline/timeline.css",
         "js/formula/formula.css",
         "js/smartInputBox/prompt-button.css",
+        "js/scrollToBottom/styles.css",
         "js/quoteReply/styles.css",
         "js/url-button/styles.css"
       ],
